// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<split> demo: render [basic] correctly 1`] = `
"<div>
  <div class=\\"mb-split mb-split-horizontal\\" style=\\"height: 200px; width: 100%; min-width: 500px;\\">
    <div class=\\"mb-split-pane mb-split-pane-first\\" style=\\"flex: 0 0 calc(50% - 0px);\\">
      <div class=\\"mb-typography\\">Right
        <!---->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div class=\\"mb-split-trigger mb-split-trigger-vertical\\">
      <!-- @slot 自定义内容 -->
      <div class=\\"mb-split-trigger-icon-wrapper\\">
        <!-- @slot 自定义 icon --><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"mb-icon mb-icon-drag-dot-vertical mb-split-trigger-icon\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
          <path d=\\"M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          <path d=\\"M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z\\"></path>
        </svg>
      </div>
    </div>
    <div class=\\"mb-split-pane mb-split-pane-second\\">
      <div class=\\"mb-typography\\">Left
        <!---->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`<split> demo: render [nested] correctly 1`] = `
"<div>
  <div class=\\"mb-split mb-split-horizontal\\" style=\\"height: 200px; width: 100%; min-width: 500px;\\">
    <div class=\\"mb-split-pane mb-split-pane-first\\" style=\\"flex: 0 0 calc(50% - 0px);\\">
      <div class=\\"mb-typography\\">Right
        <!---->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
    </div>
    <div class=\\"mb-split-trigger mb-split-trigger-vertical\\">
      <!-- @slot 自定义内容 -->
      <div class=\\"mb-split-trigger-icon-wrapper\\">
        <!-- @slot 自定义 icon --><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"mb-icon mb-icon-drag-dot-vertical mb-split-trigger-icon\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
          <path d=\\"M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          <path d=\\"M17 8h2v2h-2V8ZM17 23h2v2h-2v-2ZM17 38h2v2h-2v-2ZM29 8h2v2h-2V8ZM29 23h2v2h-2v-2ZM29 38h2v2h-2v-2Z\\"></path>
        </svg>
      </div>
    </div>
    <div class=\\"mb-split-pane mb-split-pane-second\\">
      <div>
        <div class=\\"mb-split mb-split-vertical\\" style=\\"height: 200px;\\">
          <div class=\\"mb-split-pane mb-split-pane-first\\" style=\\"flex: 0 0 calc(50% - 0px);\\">
            <div class=\\"mb-typography\\">Top
              <!---->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
          <div class=\\"mb-split-trigger mb-split-trigger-horizontal\\">
            <!-- @slot 自定义内容 -->
            <div class=\\"mb-split-trigger-icon-wrapper\\">
              <!-- @slot 自定义 icon --><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"mb-icon mb-icon-drag-dot mb-split-trigger-icon\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
                <path d=\\"M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
                <path d=\\"M40 17v2h-2v-2h2ZM25 17v2h-2v-2h2ZM10 17v2H8v-2h2ZM40 29v2h-2v-2h2ZM25 29v2h-2v-2h2ZM10 29v2H8v-2h2Z\\"></path>
              </svg>
            </div>
          </div>
          <div class=\\"mb-split-pane mb-split-pane-second\\">
            <div class=\\"mb-typography\\">Bottom
              <!---->
              <!--v-if-->
              <!--v-if-->
              <!--v-if-->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
